Sem smell codes ate Abstract Entity